# dogecoin-miner-rust

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  help.txt  miner.toml
.github/workflow/: rust.yml
.github/workflows/: audit.yml  build.yml  release.yml  rust.yml  test.yml
benches/: scrypt_bench.rs
provision/dogecoind/: Dockerfile  dogecoin.conf
provision/litecoind/: Dockerfile  litecoin.conf
script/: generate_auxblock.py  scrypt_auxpow.py
src/: configs.rs  main.rs  miner.rs  rpc.rs  utils.rs
