[package]
name = "miner-rust"
authors = ["rllola <rllola80@gmail.com>"]
edition = "2024"


[dependencies]
reqwest = { version = "0.13", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
hmac-sha256 = "1.1"
rust-scrypt = "1.3"
toml = "0.9"
koibumi-base58 = "0.0.2"